shim/third-party/rust/vendor/ref-cast-1.0.9/tests/ui/unrecognized-repr.rs
use ref_cast::RefCast;

#[derive(RefCast)]
#[repr(packed, C, usize, usize(0), usize = "0")]
struct Test {
    s: String,
}

fn main() {}
